--- a/css/styles.css
+++ b/css/styles.css
@@ -1,22 +1,91 @@
+/*====================general===============*/
 body {
   font-family: "Roboto", sans-serif;
   color: #434455;
-  background-color: #ffffff;
+  background-color: #fff;
 }
-
-ul {
-  list-style: none;
-}
-
 a {
   text-decoration: none;
 }
-
-.span {
+li {
+  list-style: none;
+}
+button {
+  cursor: pointer;
+}
+h1 {
+  color: #fff;
+  font-size: 56px;
+  font-weight: 700;
+  line-height: 1.07;
+  letter-spacing: 1.12px;
+  text-align: center;
+}
+h3 {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
   color: #2e2f42;
 }
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+ul,
+ol {
+  padding: 0;
+  margin-bottom: 0;
+  margin-top: 0;
+}
 
-.nav-link-logo-blue {
+img {
+  display: block;
+  max-width: 100%;
+}
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+.container {
+  width: 1158px;
+  margin: 0 auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+/* ====================Header====================*/
+.header {
+  border-bottom: 1px solid #e7e9fc;
+}
+.header-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 72px;
+}
+.header-nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.header-span {
+  color: #2e2f42;
+}
+.nav-link-logo {
   color: #4d5ae5;
   font-family: "Raleway", sans-serif;
   font-size: 18px;
@@ -24,167 +93,238 @@ a {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  margin-right: 76px;
 }
-
-.nav-link-logo {
-  color: #2e2f42;
+.nav-list {
+  display: flex;
+  gap: 40px;
 }
-
-.nav-link {
+.nav-item-currentm {
+  display: block;
+}
+.nav-item-current {
   color: #2e2f42;
-  font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
-  letter-spacing: 0.02em;
+  letter-spacing: 0.32px;
+  padding: 24px 0;
 }
-
-.nav-link:hover,
-.nav-link:focus {
+.nav-item-current-link:hover {
   color: #404bbf;
 }
 
-.address {
-  font-style: normal;
+.nav-item-current-link:focus {
+  color: #404bbf;
 }
 
-.header-address-link {
+.adress {
+  font-style: normal;
   color: #434455;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
+  margin-left: auto;
+  align-items: center;
+}
+.header-adress {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 40px;
+}
+.header-adress-item {
 }
 
-.header-address-link:hover,
-.header-address-link:focus {
+.header-adress-item-link {
+  color: #434455;
+  line-height: 1.5;
+  letter-spacing: 0.32px;
+}
+.header-adress-item:hover {
+  color: #404bbf;
+}
+.header-adress-item:focus {
   color: #404bbf;
 }
 
+/*====================First section =================*/
 .hero {
   background-color: #2e2f42;
+  padding: 188px 0;
 }
-
-.hero-title {
-  color: #fff;
-  text-align: center;
-  font-size: 56px;
-  line-height: 1.07;
-  letter-spacing: 0.02em;
-}
-
 .hero-bye-btn {
-  color: #fff;
-  font-size: 16px;
   background: #4d5ae5;
-  cursor: pointer;
   font-weight: 500;
   line-height: 1.5;
-  letter-spacing: 0.04em;
+  letter-spacing: 0.64px;
+  color: #fff;
+  gap: 10px;
+  display: block;
+  height: 56px;
+  border: none;
+  display: block;
+  margin: 0 auto;
+  min-width: 169px;
+  padding: 16px 32px;
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
-
-.hero-bye-btn:hover,
+.hero-bye-btn:hover {
+  background-color: #404bbf;
+}
 .hero-bye-btn:focus {
   background-color: #404bbf;
 }
-
-.features-section {
-  font-style: normal;
+.hero-container {
+  display: block;
+}
+.hero-header {
+  max-width: 496px;
+  text-align: center;
+  margin-bottom: 48px;
+  margin: 0 auto 48px;
 }
 
-.features-subtitle {
+/*====================Second section =================*/
+.studio {
+  padding: 120px 0;
+}
+.studio-list {
+  display: flex;
+  gap: 24px;
+  justify-content: center;
+}
+
+.studio-list-item {
+  width: calc((100% - 72px) / 4);
+}
+.studio-txt {
+  font-weight: 400;
+  line-height: 1.5; /* 150% */
+  letter-spacing: 0.32px;
+  margin: 0;
+}
+.studio-header {
   color: #2e2f42;
   font-size: 20px;
   font-weight: 500;
-  line-height: 1.2;
+  line-height: 1.2; /* 120% */
   letter-spacing: 0.02em;
+  margin-bottom: 8px;
+  margin-top: 0;
 }
-
-.features-item-tex {
-  color: #434455;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-}
-
-.team-item {
-  background-color: #ffffff;
-}
-
+/*==================team===============*/
 .our-team {
-  background: #f4f4fd;
+  background-color: #f4f4fd;
+  padding: 120px 0;
 }
-
 .team-title {
-  color: #2e2f42;
-  text-align: center;
-  text-transform: capitalize;
   font-size: 36px;
+  font-weight: 700;
   line-height: 1.11;
-  letter-spacing: 0.02em;
-}
-
-.team-subtitle {
-  color: #2e2f42;
-  font-size: 20px;
-  font-weight: 500;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-}
-
-.profession {
-  color: #434455;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-}
-
-.portfolio-title {
-  color: #2e2f42;
-  text-align: center;
-  font-size: 36px;
+  letter-spacing: 0.72px;
   text-transform: capitalize;
+  text-align: center;
+  color: #2e2f42;
+  margin-bottom: 72px;
+  margin-top: 0;
+}
+.team-list {
+  display: flex;
+  padding-bottom: 0;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
+}
+.team-item {
   background-color: #fff;
-  line-height: 1.11;
-  letter-spacing: 0.02em;
+  width: calc((100% - 72px) / 4);
+  border-radius: 0px 0px 4px 4px;
 }
-
-.portfolio-subtitle {
+.team-subtitles {
   color: #2e2f42;
   font-size: 20px;
   font-weight: 500;
-  line-height: 1.2;
+  line-height: 1.2; /* 120% */
   letter-spacing: 0.02em;
+  text-align: center;
+  margin-bottom: 8px;
+  margin-top: 0;
 }
-
-.portfolio-direction {
-  color: #434455;
-  font-size: 16px;
+.team-desc {
   line-height: 1.5;
-  letter-spacing: 0.02em;
+  letter-spacing: 0.32px;
+  margin: 0;
+  text-align: center;
+}
+.profession {
+  padding: 32px 0;
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
+/*====================Third section================*/
+.portfolio {
+  padding: 120px 0;
+}
+.portfolio-title {
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.11;
+  letter-spacing: 0.72px;
+  text-transform: capitalize;
+  text-align: center;
+  color: #2e2f42;
+  margin-bottom: 72px;
+  margin-top: 0;
+}
+.portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+  row-gap: 48px;
+  column-gap: 24px;
+}
+.portfolio-item {
+  width: calc((100% - 48px) / 3);
+}
+.portfolio-direction {
+  line-height: 1.5;
+  letter-spacing: 0.32px;
+  margin: 0;
+}
+.portfolio-subtitle {
+  margin-bottom: 8px;
+  margin-top: 0;
+}
+.portfolio-container {
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
+}
+
+/*====================Foooter================*/
 .footer {
   background-color: #2e2f42;
+  padding: 100px 0;
 }
-
-.footer-logo-link {
+.footer-information {
+  color: #f4f4fd;
+  line-height: 1.5;
+  letter-spacing: 0.32px;
+  max-width: 264px;
+}
+.footer-span {
+  color: #f4f4fd;
+}
+.footer-logo {
   color: #4d5ae5;
-  font-family: "Raleway", sans-serif;
+  font-family: Raleway, sans-serif;
   font-size: 18px;
   font-weight: 700;
   line-height: 1.17;
-  letter-spacing: 0.03em;
+  letter-spacing: 0.54px;
   text-transform: uppercase;
+  display: inline-block;
+  margin-bottom: 16px;
 }
-
-span {
-  color: #f4f4fd;
-}
-
-.footer-information {
-  color: #f4f4fd;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
+.footer-container {
 }
