--- a/css/styles.css
+++ b/css/styles.css
@@ -248,7 +248,7 @@ img {
   margin-bottom: 8px;
   margin-top: 0;
 }
-.team-desc {
+.profession {
   line-height: 1.5;
   letter-spacing: 0.32px;
   margin: 0;
